--- a/packages/main/src/components/protected/topbar/styles/ProfileModal.module.css
+++ b/packages/main/src/components/protected/topbar/styles/ProfileModal.module.css
@@ -231,18 +231,18 @@
   border-radius: 4px;
   overflow: hidden;
   padding-bottom: 20px;
-  height: 90vh;
+  /* height: 90vh; */
 }
 
 @media only screen and (min-width: 1080px) {
   .modalContent {
-    width: 65%;
+    width: 70%;
   }
 }
 
 .modalCont {
   overflow-y: auto;
-  height: 100%;
+  /* height: 100%; */
   /* max-height: 83vh; */
 }
 .modalHeader,
